Updated Header and Navbar to match design in sub sites

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,11 @@
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <title>React.js Boilerplate</title>
+    <script type="text/javascript" src="https://static.sketchfab.com/api/sketchfab-viewer-1.2.1.js"></script>
+
   </head>
   <body>
+
     <!-- Display a message if JS has been disabled on the browser. -->
     <noscript>If you're seeing this message, that means <strong>JavaScript has been disabled on your browser</strong>, please <strong>enable JS</strong> to make this app work.</noscript>
 
