--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <title>React.js Boilerplate</title>
     <script type="text/javascript" src="https://static.sketchfab.com/api/sketchfab-viewer-1.2.1.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
+    
 
   </head>
   <body>
